<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ticket_to_show_welcome_text">Добро пожаловать в Ticket To Show</string>
    <string name="registration_text">Зарегистрируйтесь</string>

    <string name="button_register_text">Зарегистрироваться</string>
    <string name="button_back_text">Назад</string>
    <string name="confidence_politic_text">Нажимая на кнопку \"Зарегистрироваться\" Вы соглашаетесь c политикой конфиденциальности и на обработку персональных данных</string>
    <string name="title_activity_main">activity_main</string>
    <string name="your_name_register_screen_hint_text">Имя</string>
    <string name="email_address_register_screen_hint_text">example@mail.com</string>
    <string name="password_register_screen_hint_text">Придумайте пароль</string>
    <string name="confirm_password_register_screen_text">Подтвердите пароль</string>
    <string name="password_hint_entry_screen_text">Пароль</string>
    <string name="app_name">Ticket To Show</string>
    <string name="button_entry_text">Войти</string>
    <string name="forgot_password_text">Забыли пароль?</string>
    <string name="entry_text">Вход</string>
    <string name="submit_email_text">Подтвердите почту</string>
    <string name="enter_emil_code_text">Введите 4-х значный код, отправленный на example@mail.ru</string>
    <string name="repeat_send_email_code_text">Отправить код еще раз через 60 сек.</string>
    <string name="concerts_home_screen_text">КОНЦЕРТЫ</string>

    <string name="default_string">Неизвестно</string>
    <string name="password_is_not_equal_error_text">Пароли не совпадают</string>
    <string name="incorrect_password_masks_error_text">Пароль должен состоять как минимум из 8 символов, латинских заглавных и строчных букв и одной цифры, а также включать в себя один спец символ</string>
    <string name="user_with_this_email_is_already_exist">Пользователь с указанной почтой уже существует</string>
    <string name="incorrect_password_error_text">Неверный пароль</string>
    <string name="your_account_is_not_exist_error_text">Такой аккаунт не существует</string>
    <string name="not_all_input_is_good">Не все поля регистрации заполнены правильно!</string>

    <string name="field_must_be_fill_text">Обязательное поле</string>
    <string name="input_submit_email_code_hint_text">  </string>
    
    <string name="profile_button_text">Профиль</string>
    <string name="favorite_button_text">Избранное</string>
    <string name="history_button_text">История покупок</string>
    <string name="support_button_text">Поддержка</string>
    <string name="info_button_text">Справка</string>
    <string name="log_out_button_text">Выйти</string>

    <string name="profile_screen_name_default">Ваше имя</string>
    <string name="logout_layout_text">Выйти из аккаунта?</string>
    <string name="yes_text">Да</string>
    <string name="no_text">Нет</string>

    <string name="support_name_text">Служба поддержки</string>
    <string name="support_description_text">Свяжитесь с нами если у вас возникли проблемы с оплатой или в работе приложения</string>
    <string name="support_phone_number_text">+7 (999) 111 22 33</string>
    <string name="user_data_text">Данные аккаунта</string>
    <string name="name_user_profile_screen_text">Имя</string>
    <string name="gender_user_profile_screen_text">Пол</string>
    <string name="email_user_profile_screen_text">Электронная почта</string>
    <string name="security_user_profile_screen_text">Безопасность</string>
    <string name="two_factor_authentication_user_profile_screen_text">Двухфакторная аутентификация</string>
    <string name="authentication_on_user_profile_screen_text">Подключена</string>
    <string name="authentication_off_user_profile_screen_text">Не подключена</string>
    <string name="change_password_user_profile_screen_text">Сменить пароль</string>
    <string name="save_button_text">Сохранить</string>
    <string name="do_you_sure_to_exit_text">Вы уверены, что хотите выйти?\nВнесенные Вами\nизменения не сохранятся</string>

    <string name="calendar_text">Календарь</string>
    <string name="day_1_text">1</string>
    <string name="day_2_text">2</string>
    <string name="day_3_text">3</string>
    <string name="day_4_text">4</string>
    <string name="day_5_text">5</string>
    <string name="day_6_text">6</string>
    <string name="day_7_text">7</string>
    <string name="day_8_text">8</string>
    <string name="day_9_text">9</string>
    <string name="day_10_text">10</string>
    <string name="day_11_text">11</string>
    <string name="day_12_text">12</string>
    <string name="day_13_text">13</string>
    <string name="day_14_text">14</string>
    <string name="day_15_text">15</string>
    <string name="day_16_text">16</string>
    <string name="day_17_text">17</string>
    <string name="day_18_text">18</string>
    <string name="day_19_text">19</string>
    <string name="day_20_text">20</string>
    <string name="day_21_text">21</string>
    <string name="day_22_text">22</string>
    <string name="day_23_text">23</string>
    <string name="day_24_text">24</string>
    <string name="day_25_text">25</string>
    <string name="day_26_text">26</string>
    <string name="day_27_text">27</string>
    <string name="day_28_text">28</string>
    <string name="day_29_text">29</string>
    <string name="day_30_text">30</string>
    <string name="day_31_text">31</string>


    <string name="monday_text">пн</string>
    <string name="tuesday_text">вт</string>
    <string name="wednesday_text">ср</string>
    <string name="thursday_text">чт</string>
    <string name="friday_text">пт</string>
    <string name="saturday_text">сб</string>
    <string name="sunday_text">вс</string>

    <string name="month_year_text">%s\n%d</string>

    
    <string name="date_purchased_ticket_text">Даты с купленными билетами</string>
    <string name="date_public_holidays_text">Государственные праздники</string>
    <string name="date_current_show_text">Даты текущих мероприятий</string>

    <string name="favorite_screen_text">Хочу посетить</string>

    <string name="error_404_text">404</string>
    <string name="smth_error_text">Что-то пошло не так</string>

    <string name="forgot_password_screen_email_text">Введите почту</string>
    <string name="reset_password_text">Восстановление пароля</string>
    <string name="forgot_password_next_button_text">Далее</string>
    <string name="forgot_password_password_is_changed_text">Пароль успешно изменен!</string>
    <string name="that_email_is_not_exist_text">Пользователя с такой почтой не существует</string>

    <string name="history_text">История</string>
    <string name="date_bought_text">Дата покупки: %s</string>
    <string name="place_text">Место: %s</string>
    <string name="price_text">Цена: %s</string>
    <string name="visited_event_text">Посещено</string>
    <string name="today_event_text">Сегодня</string>
    <string name="in_future_event_text">Предстоящее</string>
    <string name="not_visited_event_text">Не посещено</string>

</resources>