<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".application.view.registerscreen.RegisterScreenFragment">

    <include layout="@layout/part_result"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"
            android:src="@drawable/tts_main_text" />

        <TextView
            android:id="@+id/registration_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/registration_text"
            android:textColor="@color/white"
            android:textSize="@dimen/big_text_size" />


        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="creditCardExpirationDate"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/your_name_register_screen_hint_text"
            android:inputType="text"
            android:paddingTop="30dp"
            android:tag="false"
            android:textColorHint="@color/text_hint_color" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/email_address_register_screen_hint_text"
            android:inputType="textEmailAddress"
            android:paddingTop="30dp"
            android:tag="false"
            android:textColorHint="@color/text_hint_color" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/password_register_screen_hint_text"
            android:inputType="textPassword"
            android:paddingTop="30dp"
            android:tag="false"
            android:textColorHint="@color/text_hint_color"
            app:passwordToggleEnabled="true" />

        <EditText
            android:id="@+id/confirm_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/confirm_password_register_screen_text"
            android:inputType="textPassword"
            android:paddingTop="30dp"
            android:tag="false"
            android:textColorHint="@color/text_hint_color"
            app:passwordToggleEnabled="true" />

        <TextView
            android:id="@+id/register_screen_error_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/default_string"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            android:visibility="gone"
            app:drawableLeftCompat="@drawable/error_register_screen_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/register_button_on_color"
            android:text="@string/button_register_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/white"
            android:text="@string/button_back_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="20dp" />

        <TextView
            android:id="@+id/confidence_politic_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/confidence_politic_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size" />


    </LinearLayout>


</FrameLayout>