<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".application.view.userprofilescreen.UserProfileScreenFragment">

    <include layout="@layout/part_result" />

    <GridLayout
        android:id="@+id/exit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_log_out_layout"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logout_layout_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/do_you_sure_to_exit_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/big_text_size" />

        <Button
            android:id="@+id/yes_logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/yes_text"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/no_logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/register_button_on_color"
            android:text="@string/no_text"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="55dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/back_arrow_icon"
            android:text="@string/button_back_text"
            android:textColor="@color/white"
            android:textSize="@dimen/big_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/tts_main_text" />

        <TextView
            android:id="@+id/name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/profile_screen_name_default"
            android:textColor="@color/white"
            android:textSize="@dimen/very_big_text_size" />

        <TextView
            android:id="@+id/email_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/default_string"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/user_data_text"
            android:textColor="@color/bg_text_user_profile_screen"
            android:textSize="@dimen/big_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/name_user_profile_screen_text"
            android:textColor="@color/white"
            android:textSize="@dimen/big_text_size" />

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@color/bg_edit_text_user_profile_and_layout_calendar_color"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/profile_screen_name_default"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            app:cornerRadius="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/email_user_profile_screen_text"
            android:textColor="@color/white"
            android:textSize="@dimen/big_text_size" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginRight="10dp"
            android:background="@color/bg_edit_text_user_profile_and_layout_calendar_color"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/default_string"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            app:cornerRadius="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/security_user_profile_screen_text"
            android:textColor="@color/bg_text_user_profile_screen"
            android:textSize="@dimen/big_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/two_factor_authentication_user_profile_screen_text"
            android:textColor="@color/white"
            android:textSize="@dimen/big_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@color/bg_edit_text_user_profile_and_layout_calendar_color"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/authentication_on_user_profile_screen_text"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            app:cornerRadius="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/password_hint_entry_screen_text"
            android:textColor="@color/white"
            android:textSize="@dimen/big_text_size" />

        <TextView
            android:id="@+id/change_password_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginRight="10dp"
            android:background="@color/bg_edit_text_user_profile_and_layout_calendar_color"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/change_password_user_profile_screen_text"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="60dp"
            android:text="@string/save_button_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size"
            android:visibility="gone"
            app:cornerRadius="10dp" />

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_nav_menu" />
    </FrameLayout>
</FrameLayout>