<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".application.view.changepasswordscreen.ChangePasswordFragment">

    <include layout="@layout/part_result" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"
            android:src="@drawable/tts_main_text" />

        <TextView
            android:id="@+id/reset_password_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reset_password_text"
            android:textColor="@color/white"
            android:textSize="@dimen/big_text_size" />


        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/forgot_password_screen_email_text"
            android:inputType="textEmailAddress"
            android:paddingTop="30dp"
            android:textColorHint="@color/text_hint_color" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/password_register_screen_hint_text"
            android:inputType="textPassword"
            android:paddingTop="30dp"
            android:textColorHint="@color/text_hint_color"
            android:visibility="gone"
            app:passwordToggleEnabled="true" />

        <EditText
            android:id="@+id/confirm_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/confirm_password_register_screen_text"
            android:inputType="textPassword"
            android:paddingTop="30dp"
            android:textColorHint="@color/text_hint_color"
            android:visibility="gone"
            app:passwordToggleEnabled="true" />

        <ImageView
            android:id="@+id/password_is_changed_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/password_is_changed"
            android:visibility="gone" />

        <TextView
            android:id="@+id/password_is_changed_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_password_is_changed_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/big_text_size"
            android:visibility="gone" />

        <TextView
            android:id="@+id/forgot_password_screen_error_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/default_string"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            android:visibility="gone"
            app:drawableLeftCompat="@drawable/error_register_screen_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/log_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/white"
            android:text="@string/button_entry_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:visibility="gone"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/white"
            android:text="@string/forgot_password_next_button_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="80dp"
            android:backgroundTint="@color/black"
            android:text="@string/button_back_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="20dp" />

    </LinearLayout>


</FrameLayout>