<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".application.view.entryscreen.EntryScreenFragment">

    <include layout="@layout/part_result" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="50dp"
            android:src="@drawable/tts_main_text" />

        <TextView
            android:id="@+id/entry_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:text="@string/entry_text"
            android:textColor="@color/white"
            android:textSize="@dimen/big_text_size" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/email_address_register_screen_hint_text"
                android:inputType="textEmailAddress"
                android:paddingTop="30dp"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/password_hint_entry_screen_text"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                app:passwordToggleEnabled="true" />

            <TextView
                android:id="@+id/entry_screen_error_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/default_string"
                android:textColor="@color/white"
                android:textSize="@dimen/small_text_size"
                android:visibility="gone"
                app:drawableLeftCompat="@drawable/error_register_screen_icon" />

        </LinearLayout>


        <TextView
            android:id="@+id/forgot_password_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password_text"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>


    <ImageButton
        android:id="@+id/log_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_entry_screen_button"
        android:src="@drawable/arrow_icon" />


</FrameLayout>