<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    tools:context=".application.view.errorscreen.ErrorScreenFragment">

    <TextView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/back_arrow_icon"
        android:text="@string/button_back_text"
        android:textColor="@color/white"
        android:textSize="@dimen/big_text_size" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_404_text"
            android:textColor="@color/white"
            android:textSize="@dimen/mega_very_big_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smth_error_text"
            android:textColor="@color/white"
            android:textSize="@dimen/very_big_text_size" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav_menu"
            app:menu="@menu/bottom_nav_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

</FrameLayout>